# gol-competition

./: README.md  pyproject.toml
gol_competition/: cli.py  simulation.py
